<resources>
    <string name="app_name">Chemi</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="about">About</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="elements">Элементы</string>
    <string name="home">Таблица Менделеева</string>
    <string name="todo">TODO</string>
    <string name="res_name">Таблица Менделеева</string>
    <string name="description"> Табли́ца Менделе́ева — классификация химических элементов, устанавливающая зависимость различных свойств элементов от их заряда атомного ядра. Система является графическим выражением периодического закона, открытого русским учёным Д. И. Менделеевым в 1869 году. Её первоначальный вариант был разработан Д. И. Менделеевым в 1869—1871 годах и устанавливал зависимость свойств элементов от их атомной массы. Всего предложено несколько сотен вариантов изображения периодической системы. В современном варианте системы предполагается сведение элементов в двумерную таблицу, в которой каждый столбец (группа) определяет основные физико-химические свойства, а строки представляют собой периоды, в определённой мере подобные друг другу.</string>
    <string name="todo1">TODO1</string>
    <string name="todo2">TODO2</string>
    <string name="chemi_elements">Chemi</string>
    <string name="inorgchem">Неорганическая</string>
    <string name="orgchem">Органическая</string>
    <string name="metals">Металлы</string>
    <string name="btn_mt1">Button</string>
    <string name="nemt">Неметаллы</string>
    <string name="mt">Металлы</string>
    <string name="title_activity_mt">MtActivity</string>
    <string name="title_activity_nemt">NemtActivity</string>
    <string name="spt">Спирты</string>
    <string name="yv">Углеводороды</string>
    <string name="title_activity_spt">SptActivity</string>
    <string name="title_activity_yv">YvActivity</string>
    <string name="mt_about">Что такое Металлы?</string>
    <string name="mt_about1">Мета́ллы — группа элементов в виде простых веществ, обладающих характерными металлическими свойствами, такими, как высокие тепло- и электропроводность, положительный температурный коэффициент сопротивления, высокая пластичность, ковкость и металлический блеск. Все металлы хорошо проводят электрический ток; это обусловлено наличием в их кристаллических решётках подвижных электронов, перемещающихся под действием электрического поля.</string>
    <string name="todo3">mt_pic</string>
    <string name="nav_chem">Химия</string>
    <string name="mt_help">about mt</string>
    <string name="title_activity_info1">Info1Activity</string>
    <string name="mtorno_info">Определить, является простое вещество металлом или неметаллом, можно с помощью периодической таблицы. Химические элементы металлы, образующие простые вещества с металлическими свойствами, располагаются в периодической таблице слева ниже диагонали «водород — бор — кремний — мышьяк — теллур — астат». Вверху справа располагаются химические элементы неметаллы, которые образуют простые вещества с неметаллическими свойствами.</string>
    <string name="mtorno_info1">Металл или Неметалл?</string>
    <string name="todo6">TODO</string>
    <string name="todo5">TODO5</string>
    <string name="info_mttab">• Синий - это Металлы</string>
    <string name="info_nemttab">• Желтый - это Неметаллы</string>
    <string name="Nemt_about">Немета́ллы — химические элементы с типично неметаллическими свойствами, которые занимают правый верхний угол Периодической системы.</string>
    <string name="Nemt_about2">В отличие от металлов, неметаллов гораздо меньше, всего их насчитывается 22 элемента.
Характерной особенностью неметаллов является большее (по сравнению с металлами) число электронов на внешнем энергетическом уровне их атомов. Это определяет их большую способность к присоединению дополнительных электронов, и проявлению более высокой окислительной активности, чем у металлов.
Неметаллы имеют высокие значения сродства к электрону, большую электроотрицательность и высокий окислительно-восстановительный потенциал. </string>
    <string name="Nemt_about1">Что такое Неметаллы?</string>
    <string name="nemt3">В свободном виде могут быть газообразные неметаллические простые вещества — фтор, хлор, кислород, азот, водород, инертные газы, твёрдые — иод, астат, сера, селен, теллур, фосфор, мышьяк, углерод, кремний, бор, при комнатной температуре в жидком состоянии существует бром.</string>
    <string name="nemt4">У некоторых неметаллов наблюдается проявление аллотропии. Так, для газообразного кислорода характерны две аллотропных модификации — кислород (O2) и озон (O3), у твёрдого углерода множество форм — алмаз, астралены, графен, графит, карбин, лонсдейлит, фуллерены, стеклоуглерод, диуглерод, углеродные наноструктуры (нанопена, наноконусы, нанотрубки, нановолокна) и аморфный углерод уже открыты, а ещё возможны и другие модификации, например, чаоит и металлический углерод.</string>
    <string name="nemt5">В молекулярной форме в виде простых веществ в природе встречаются азот, кислород и сера. Чаще неметаллы находятся в химически связанном виде: это вода, минералы, горные породы, различные силикаты, фосфаты, бораты. По распространённости в земной коре неметаллы существенно различаются. Наиболее распространёнными являются кислород, кремний, водород; наиболее редкими — мышьяк, селен, иод и теллур</string>
    <string name="spt_about">Что такое Спирты?</string>
    <string name="yv_about">Что такое Углеводороды?</string>
    <string name="spt1">Спирты — органические соединения, содержащие одну или более гидроксильных групп (гидроксил, −OH), непосредственно связанных с насыщенным (находящимся в состоянии sp³-гибридизации) атомом углерода. Названия спиртов образуются путём добавления суффикса –ол к названию соответствующего углеводорода.</string>
    <string name="spt2">Спирты бывают одноатомные и многоатомные. Если в молекуле спирта только одна гидроксильная группа, то такой спирт называется одноатомным. Если же количество гидроксильных групп 2, 3, 4 и т.д., то это многоатомный спирт.</string>
    <string name="title_activity_info2">Info2Activity</string>
    <string name="atom1spt">Спирты</string>
    <string name="sptinfo2"> 2. При реакции спиртов со щелочными металлами образуется алкоголят натрия и выделяется водород. \n
        C2H5-OH + 2Na → 2C2H5ONa + H2. </string>
    <string name="sptinfo3"> 3. Реакция с галогеноводородом. В результате реакции образуется галогеноалкан (бромэтан и вода). \n
        C2H5OH + HBr → C2H5Br + H2O. </string>
    <string name="sptinfo5"> 5. Окисление спиртов. При обычной температуре спирты не окисляются. Но при помощи катализаторов и при нагревании окисление происходит. </string>
    <string name="sptinfo4"> 4. Внутримолекулярная дегидратация происходит при нагревании и под воздействием концентрированной серной кислоты. В результате получается непредельный углеводород и вода. \n
        Н3 – СН2 – ОН → СН2 = СН2 + Н2О. </string>
    <string name="sptinfo">1. Спирты горят, образуя углекислый газ и воду. При горении выделяется тепло. \n
        C2H5OH + 3O2 → 2CO2 + 3H2O.</string>
    <string name="sptinfo6">Многоатомные спирты вступают в реакцию с активными металлами, с галогеноводородными кислотами, с азотной кислотой.</string>
    <string name="orgchem1">Органи́ческая хи́мия — раздел химии, изучающий структуру, свойства и методы синтеза углеводородов и их производных. Производными углеводородов называются вещества, полученные из углеводородов замещением одного или нескольких атомов водорода на другие атомы или группы атомов.</string>
    <string name="orgchem2">Органическая химия изучает:</string>
    <string name="orgchem3">• Выделение индивидуальных веществ из растительного, животного или ископаемого сырья.</string>
    <string name="orgchem4">• Синтез и очистка соединений.</string>
    <string name="orgchem5">• Определение структуры веществ.</string>
    <string name="orgchem6">• Выявление зависимостей между структурой органических веществ и их свойствами.</string>
    <string name="orgchem7">• Изучение механизмов химических реакций.</string>
    <string name="inorgchem1">Неоргани́ческая хи́мия — раздел химии, связанный с изучением строения, реакционной способности и свойств всех химических элементов и их неорганических соединений. Эта область охватывает все химические соединения, за исключением органических веществ</string>
    <string name="inorgchem2">Неорганическая химия изучает химические элементы и образуемые или простые и сложные вещества. Обеспечивает создание материалов новейшей техники.</string>
    <string name="title_activity_km1">Km1Activity</string>
    <string name="title_activity_km2">Km2Activity</string>
    <string name="yv1">Углеводоро́ды — органические соединения, состоящие из атомов углерода и водорода. Углеводороды служат фундаментальной основой органической химии — молекулы любых других органических соединений рассматривают как их производные.</string>
    <string name="yv2">Углеводороды образуют гомологические ряды. Члены гомологического ряда характеризуются закономерным изменением химических и физических свойств, общей формулой и сходной структурой. В природе углеводороды встречаются в жидком, твёрдом и газообразном состоянии. В рассеянном виде присутствуют в атмосфере, воде, горных породах, в концентрированном виде в залежах. В зависимости от строения различают ациклические углеводороды, в молекулах которых атомы С связаны друг с другом в линейные или разветвлённые цепи, и изоциклические углеводороды, молекулы которых имеют кольцеобразное строение и состоят из трёх и более атомов С.</string>
    <string name="pre_mt1">Группа элементов в виде простых веществ, обладающих характерными металлическими свойствами, такими, как высокие тепло- и электропроводность, положительный температурный коэффициент сопротивления, высокая пластичность, ковкость и металлический блеск.</string>
    <string name="km0">Узнать больше</string>
    <string name="pre_nemt1">Немета́ллы — химические элементы с типично неметаллическими свойствами, которые занимают правый верхний угол Периодической системы. В отличие от металлов неметаллов гораздо меньше, всего их насчитывается 22 элемента.</string>
    <string name="pre_spt1">Спирты – это химические соединения, молекулы которых содержат гидроксильные группы ОН, соединённые с углеводородным радикалом.</string>
    <string name="pre_yv1">Углеводоро́ды — органические соединения, состоящие из атомов углерода и водорода. Углеводороды служат фундаментальной основой органической химии — молекулы любых других органических соединений рассматривают как их производные.</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="about1">Chemi - Химический Справочник</string>
    <string name="elements1">Хими́ческий элеме́нт — совокупность атомов с одинаковым зарядом атомных ядер. Атомное ядро состоит из протонов, число которых равно атомному номеру элемента, и нейтронов, число которых может быть различным. Каждый химический элемент имеет своё латинское название и химический символ, состоящий из одной или пары латинских букв, регламентированные ИЮПАК и приводятся, в частности, в таблице Периодической системы элементов Менделеева. Формой существования химических элементов в свободном виде являются простые вещества. Необходимо различать химические элементы и соответствующие им материальные объекты — простые вещества.</string>
    <string name="title_activity_elements">ElementsActivity</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="title_activity_alkans">AlkansActivity</string>
</resources>