<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Info1Activity"
    tools:showIn="@layout/activity_info1">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="15dp"
                android:background="@drawable/layout_bg1"
                android:layout_marginLeft="15dp"
                android:layout_marginBottom="15dp"
                android:elevation="5dp"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/mt_about"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:elevation="5dp"
                    android:gravity="center"
                    android:text="@string/mtorno_info1"
                    android:textColor="#CC222121"
                    android:textSize="35sp"
                    android:textStyle="bold"
                    app:fontFamily="@font/roboto_medium" />
            </LinearLayout>

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/mt_tab"
                    android:contentDescription="@string/todo"
                    android:adjustViewBounds="true"
                    tools:ignore="ContentDescription" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/layout_bg"
                    android:layout_marginRight="15dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp"
                    android:elevation="5dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView"
                        android:textIsSelectable="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="#fefefe"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:layout_marginTop="15dp"
                        android:text="@string/mtorno_info"
                        android:textColor="#CC222121"
                        android:textSize="25sp"
                        app:fontFamily="@font/roboto_light"
                        android:layout_marginStart="10dp" />

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="match_parent"
                        android:layout_height="316dp"
                        android:contentDescription="@string/todo5"
                        app:srcCompat="@drawable/mtnemt_tab"
                        tools:ignore="ContentDescription"/>

                    <TextView
                        android:id="@+id/textView2"
                        android:textIsSelectable="true"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/info_mttab"
                        android:textColor="#1565C0"
                        android:textSize="25sp"
                        app:fontFamily="@font/roboto_medium"
                        android:layout_marginStart="15dp"
                        android:layout_marginRight="15dp"
                        android:background="#fefefe"
                        android:layout_marginLeft="15dp"
                        android:layout_marginBottom="15dp"/>
                    <TextView
                        android:id="@+id/textView4"
                        android:textIsSelectable="true"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/info_nemttab"
                        android:textColor="#EFD61F"
                        android:textSize="25sp"
                        app:fontFamily="@font/roboto_medium"
                        android:layout_marginStart="15dp"
                        android:layout_marginRight="15dp"
                        android:background="#fefefe"
                        android:layout_marginLeft="15dp"
                        android:layout_marginBottom="15dp"/>
                </LinearLayout>
        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>