<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentOrgchem"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/layout_bg1"
                android:layout_marginRight="15dp"
                android:layout_marginLeft="15dp"
                android:elevation="5dp"
                android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView12"
                        android:layout_width="match_parent"
                        android:gravity="center"
                        android:layout_height="wrap_content"
                        android:text="Что это такое?"
                        android:layout_marginBottom="5dp"
                        android:elevation="5dp"
                        android:textColor="#CC222121"
                        android:textSize="35sp"
                        android:textStyle="bold"
                        app:fontFamily="@font/roboto_medium"/>
            </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/layout_bg"
                        android:layout_marginRight="15dp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginTop="15dp"
                        android:elevation="5dp"
                        android:paddingBottom="15dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView13"
                            android:textIsSelectable="true"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="15dp"
                            android:layout_marginTop="15dp"
                            android:layout_marginRight="15dp"
                            android:text="@string/orgchem1"
                            android:textColor="#CC222121"
                            android:textSize="25sp"
                            app:fontFamily="@font/roboto_light" />
                    </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/layout_bg"
                            android:layout_marginRight="15dp"
                            android:layout_marginLeft="15dp"
                            android:layout_marginBottom="15dp"
                            android:layout_marginTop="15dp"
                            android:elevation="5dp"
                            android:orientation="vertical">
                            <TextView
                                android:id="@+id/textView14"
                                android:textIsSelectable="true"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/orgchem2"
                                android:layout_marginLeft="15dp"
                                android:layout_marginTop="15dp"
                                android:layout_marginRight="15dp"
                                android:textColor="#CC222121"
                                android:textSize="26sp"
                                app:fontFamily="@font/roboto_bold"/>

                            <TextView
                                android:id="@+id/textView15"
                                android:textIsSelectable="true"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="15dp"
                                android:layout_marginTop="15dp"
                                android:layout_marginRight="15dp"
                                android:text="@string/orgchem3"
                                android:textColor="#CC222121"
                                android:textSize="25sp"
                                app:fontFamily="@font/roboto_light" />
                            <TextView
                                android:id="@+id/textView16"
                                android:textIsSelectable="true"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/orgchem4"
                                android:layout_marginLeft="15dp"
                                android:layout_marginTop="3dp"
                                android:layout_marginRight="15dp"
                                android:textColor="#CC222121"
                                android:textSize="25sp"
                                app:fontFamily="@font/roboto_light"/>
                            <TextView
                                android:id="@+id/textView17"
                                android:textIsSelectable="true"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/orgchem5"
                                android:layout_marginLeft="15dp"
                                android:layout_marginTop="3dp"
                                android:layout_marginRight="15dp"
                                android:textColor="#CC222121"
                                android:textSize="25sp"
                                app:fontFamily="@font/roboto_light"/>
                            <TextView
                                android:id="@+id/textView18"
                                android:textIsSelectable="true"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/orgchem6"
                                android:layout_marginLeft="15dp"
                                android:layout_marginTop="3dp"
                                android:layout_marginRight="15dp"
                                android:textColor="#CC222121"
                                android:textSize="25sp"
                                app:fontFamily="@font/roboto_light"/>
                            <TextView
                                android:id="@+id/textView19"
                                android:textIsSelectable="true"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/orgchem7"
                                android:layout_marginLeft="15dp"
                                android:layout_marginTop="3dp"
                                android:layout_marginRight="15dp"
                                android:textColor="#CC222121"
                                android:textSize="25sp"
                                app:fontFamily="@font/roboto_light"/>
                            <Button
                                android:id="@+id/btn_km1"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginTop="20dp"
                                android:layout_marginBottom="25dp"
                                style="@style/ButtonBorder.Accent"
                                android:padding="10dp"
                                android:text="@string/km0"
                                android:textSize="27sp" />
                        </LinearLayout>
            </LinearLayout>
    </ScrollView>
</FrameLayout>