<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".SptActivity"
    tools:showIn="@layout/activity_spt">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/layout_bg1"
                android:layout_marginRight="15dp"
                android:layout_marginLeft="15dp"
                android:elevation="5dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/spt_about"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:elevation="5dp"
                    android:gravity="center"
                    android:layout_marginBottom="5dp"
                    android:text="@string/spt_about"
                    android:textColor="#CC222121"
                    android:textSize="35sp"
                    android:textStyle="bold"
                    app:fontFamily="@font/roboto_medium" />
            </LinearLayout>

                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="match_parent"
                    android:layout_height="180dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="15dp"
                    app:srcCompat="@drawable/sptpic" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/layout_bg"
                android:layout_marginRight="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginBottom="15dp"
                android:elevation="5dp"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/spt_about1"
                    android:textIsSelectable="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginBottom="15dp"
                    android:text="@string/spt1"
                    android:textColor="#CC222121"
                    android:textSize="25sp"
                    app:fontFamily="@font/roboto_light"/>

                <ImageView
                    android:id="@+id/spt_pic1"
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:contentDescription="@string/todo3"
                    android:src="@drawable/sptpic2" />
                <TextView
                    android:id="@+id/spt_about2"
                    android:textIsSelectable="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="15dp"
                    android:text="@string/spt2"
                    android:textColor="#CC222121"
                    android:textSize="25sp"
                    app:fontFamily="@font/roboto_light"
                    android:layout_marginBottom="10dp"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>